[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "narou"
description = "An API wrapper for Shōsetsuka ni Narō."
version = "0.1.0"
dependencies = ["httpx"]
requires-python = ">=3.12.3"
readme = "README.md"
keywords = ["api", "novel", "library", "wrapper"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]

[[project.authors]]
name = "Kai Tomotake"
email = "kaitomotake@gmail.com"

[tool.setuptools.packages.find]
where = ["src"]
include = ["narou-py"]